Fix the context values selector when it is behind the editor window and fix moving diploma text after saving test

--- a/frontend/src/static/css/diploma_editor.css
+++ b/frontend/src/static/css/diploma_editor.css
@@ -8,7 +8,7 @@
 
 .rdw-editor-main {
     border-top: rgba(91, 91, 91, 0.5) 2px solid;
-    aspect-ratio: 1 / 1.414; /* Соотношение сторон листа а4 */
+    aspect-ratio: 210 / 297; /* Соотношение сторон листа а4 */
     font-size: 16px;
 }
 
