--- a/frontend/src/static/css/navbar.css
+++ b/frontend/src/static/css/navbar.css
@@ -33,7 +33,7 @@ nav {
     position: sticky;
     top: 0;
     background-color: #fff;
-    z-index: 2;
+    z-index: 3;
 }
 
 .navbar-left {
